Fixed ads (and shifted slightly)

--- a/assets/themes/twitter/css/style.css
+++ b/assets/themes/twitter/css/style.css
@@ -68,4 +68,7 @@ body {
 	border:1px solid #4C964D;
 	color:#FFF;
 }
-	
+#ads
+{
+  text-align:center;
+}
